finish banner section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
        </nav>
        <div class="banner-sec-container">
         <div class="banner-innertext">
-            <div>
+            <div class="banner-img">
                 <img src="/assets/Group.png" alt="">
             </div>
             <div class="banner-title">
@@ -25,12 +25,14 @@
             </div>
             <div class="banner-desc">
                 <p>Software development has come a long way with frequent leaps in technology.
+                    <br>
                      Software controls our lives, from mobile apps to artificial intelligence, 
+                     <br>
                     which we can’t live without.
                 </p>
             </div>
             <div>
-                <button>Contact with us</button>
+               <a href=""> <button class="scroll-down">Contact with us</button></a>
             </div>
         </div>
        </div>
