finish data section

--- a/index.html
+++ b/index.html
@@ -38,7 +38,53 @@
        </div>
     </header>
     <main>
+        <section class="container">
+            <div class="data-title-desc">
+                <h2 class="container-title text-center">Why Web Development??</h2>
+        <p class="desc text-center">
+            Web development is a fast-paced and challenging career,
+            centered on creative problem-solving and continuous innovation.
+             As a web developer you'll work with a multidisciplinary team of designers,
+            other developers, and marketers to realize your projects.
+        </p>
+            </div>
+        <div class="data-container-1">
 
+            <div class="data-text-container">
+                <h3 class="data-title ">I will Do Coding and Change The World</h3>
+                <p class="desc">I want to be a proffesional web developer.To earn this badge i will do coding.</p>
+                <button class="data-btn-primary">Learn More</button>
+            </div>
+            <div class="data-img-container">
+                <img src="/assets/Layer_1.png" alt="">
+            </div>
+
+        </div>
+        <div class="data-container-2">
+
+            <div class="data-text-container">
+                <h3 class="data-title">I will help People by creating Modern Web System</h3>
+                <p class="desc">By learning web development,i can manage to build web base project and help people.</p>
+                <button class="data-btn-primary">Learn More</button>
+            </div>
+            <div class="data-img-container">
+                <img src="/assets/Group 3.png" alt="">
+            </div>
+
+        </div>
+        <div class="data-container-3  ">
+
+            <div class="data-text-container">
+                <h3 class="data-title">I will Do Coding and Change The World</h3>
+                <p class="desc">I want to be a proffesional web developer.To earn this badge i will do coding.</p>
+                <button class="data-btn-primary">Learn More</button>
+            </div>
+            <div class="data-img-container">
+                <img src="/assets/Group 4.png" alt="">
+            </div>
+
+        </div>
+        </section>
     </main>
     <footer>
 
