--- a/index.html
+++ b/index.html
@@ -85,6 +85,18 @@
 
         </div>
         </section>
+        <section class="inspiration">
+            <h1 class="inspiration-title text-center">My Inspiration</h1>
+            <p class="desc text-center">From this man and his motivation give me hope to be a programmer.</p>
+            <div class="video text-center">
+                <iframe class="v-size" width="1140" height="624" src="https://www.youtube.com/embed/wfMmFjAkD7w?si=Iv8X3hbV3nP41ClG" title="YouTube video player"
+             frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </section>
+        <section class="targer-sec">
+
+        </section>
     </main>
     <footer>
 
