finish skills section

--- a/index.html
+++ b/index.html
@@ -95,7 +95,28 @@
             </div>
         </section>
         <section class="targer-sec">
-
+            <h1 class="target-title text-center">My Current Target</h1>
+            <p class="desc text-center">My current target to learn HTML ,CSS and JAVASCIRPT.I need to focus on it and practise it more and more.</p>
+            <div class="skills">
+                <div class="skill-1">
+                    <img src="/assets/html.png" alt="">
+                    <h3 class="skill-title">HTML</h3>
+                    <p class="desc">HYPER TEXT MARK-UP LANGUAGE.A basic language for developing journey.</p>
+                   <a href="">Learn More</a>
+                </div>
+                <div class="skill-2">
+                    <img src="/assets/css.png" alt="">
+                    <h3 class="skill-title">CSS</h3>
+                    <p class="desc">Casecading Style Sheet.Its use for design a website.</p>
+                    <a href="">Learn More</a>
+                </div>
+                <div class="skill-3">
+                    <img src="/assets/js.png" alt="">
+                    <h3 class="skill-title">Java Scirpt</h3>
+                    <p class="desc">A programming language.To build and responsive a website.</p>
+                  <a href="">Learn More</a>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
