done for section and make relation it with banner section's button

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </p>
             </div>
             <div>
-               <a href=""> <button class="scroll-down">Contact with us</button></a>
+               <a href="#form"> <button class="scroll-down">Contact with us</button></a>
             </div>
         </div>
        </div>
@@ -116,6 +116,14 @@
                     <p class="desc">A programming language.To build and responsive a website.</p>
                   <a href="">Learn More</a>
                 </div>
+            </div>
+        </section>
+        <section class="form" id="form">
+            <h1 class="form-title">I need Support</h1>
+            <p class="form-desc">I am a beginner thats why i am always looking for more ...</p>
+            <div class="text-center">
+                <input class="inbox" type="text" placeholder="Suggest me any feedback for me">
+                <input class="submit" type="submit" value="Submit">
             </div>
         </section>
     </main>
