finish footer section

--- a/index.html
+++ b/index.html
@@ -127,8 +127,13 @@
             </div>
         </section>
     </main>
-    <footer>
-
+    <footer  class="footer">
+        <h1 class="footer-title">An Open Commitment by Imtiaz Ahmed</h1>
+        <div class="f-img">
+            <img src="/assets/facebook.png" alt="">
+            <img src="/assets/github.png" alt="">
+            <img src="/assets/linkedin-icon 1.png" alt="">
+        </div>
     </footer>
 </body>
 </html>
