--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
     <footer  class="footer">
         <h1 class="footer-title">An Open Commitment by Imtiaz Ahmed</h1>
         <div class="f-img">
-            <img src="/assets/facebook.png" alt="">
-            <img src="/assets/github.png" alt="">
-            <img src="/assets/linkedin-icon 1.png" alt="">
+           <a href="https://www.facebook.com/"> <img src="/assets/facebook.png" alt=""></a>
+           <a href="https://github.com/"> <img src="/assets/github.png" alt=""></a>
+           <a href="https://www.linkedin.com/"> <img src="/assets/linkedin-icon 1.png" alt=""></a>
         </div>
     </footer>
 </body>
