clear all bugs and finish the project

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
        <div class="banner-sec-container">
         <div class="banner-innertext">
             <div class="banner-img">
-                <img src="/assets/Group.png" alt="">
+                <img src="./assets/Group.png" alt="">
             </div>
             <div class="banner-title">
                 <h1>"In the near future, I hope to
@@ -56,7 +56,7 @@
                 <button class="data-btn-primary">Learn More</button>
             </div>
             <div class="data-img-container">
-                <img src="/assets/Layer_1.png" alt="">
+                <img src="./assets/Layer_1.png" alt="">
             </div>
 
         </div>
@@ -68,7 +68,7 @@
                 <button class="data-btn-primary">Learn More</button>
             </div>
             <div class="data-img-container">
-                <img src="/assets/Group 3.png" alt="">
+                <img src="./assets/Group 3.png" alt="">
             </div>
 
         </div>
@@ -80,7 +80,7 @@
                 <button class="data-btn-primary">Learn More</button>
             </div>
             <div class="data-img-container">
-                <img src="/assets/Group 4.png" alt="">
+                <img src="./assets/Group 4.png" alt="">
             </div>
 
         </div>
@@ -99,19 +99,19 @@
             <p class="desc text-center">My current target to learn HTML ,CSS and JAVASCIRPT.I need to focus on it and practise it more and more.</p>
             <div class="skills">
                 <div class="skill-1">
-                    <img src="/assets/html.png" alt="">
+                    <img src="./assets/html.png" alt="">
                     <h3 class="skill-title">HTML</h3>
                     <p class="desc">HYPER TEXT MARK-UP LANGUAGE.A basic language for developing journey.</p>
                    <a href="">Learn More</a>
                 </div>
                 <div class="skill-2">
-                    <img src="/assets/css.png" alt="">
+                    <img src="./assets/css.png" alt="">
                     <h3 class="skill-title">CSS</h3>
                     <p class="desc">Casecading Style Sheet.Its use for design a website.</p>
                     <a href="">Learn More</a>
                 </div>
                 <div class="skill-3">
-                    <img src="/assets/js.png" alt="">
+                    <img src="./assets/js.png" alt="">
                     <h3 class="skill-title">Java Scirpt</h3>
                     <p class="desc">A programming language.To build and responsive a website.</p>
                   <a href="">Learn More</a>
@@ -130,9 +130,9 @@
     <footer  class="footer">
         <h1 class="footer-title">An Open Commitment by Imtiaz Ahmed</h1>
         <div class="f-img">
-           <a href="https://www.facebook.com/"> <img src="/assets/facebook.png" alt=""></a>
-           <a href="https://github.com/"> <img src="/assets/github.png" alt=""></a>
-           <a href="https://www.linkedin.com/"> <img src="/assets/linkedin-icon 1.png" alt=""></a>
+           <a href="https://www.facebook.com/"> <img src="./assets/facebook.png" alt=""></a>
+           <a href="https://github.com/"> <img src="./assets/github.png" alt=""></a>
+           <a href="https://www.linkedin.com/"> <img src="./assets/linkedin-icon 1.png" alt=""></a>
         </div>
     </footer>
 </body>
